app/components/layout/HeroSection/HeroSection.module.scss
.container_title {
  max-width: 1200px;
  width: 100%;
  margin: 0 auto;
  box-sizing: border-box;
}
.container_padding_hero {
  padding: 24px 0;
  @media (min-width: 640px) {
    padding: 32px 0;
  }
  @media (min-width: 1200px) {
    padding: 56px 0;
  }
}
.h1 {
  margin: 0;
  font-family: Mont-Bold;
  color: var(--text-clr);
  font-weight: 800;
  font-size: 32px;
  line-height: 41px;
  letter-spacing: -1%;
  @media (min-width: 640px) {
    font-size: 48px;
  }

}

